<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <!--лейаут нужный для задания маржина-->
    <!--коренной лейаут этой разметки очень нагло эксплуатируется диалогом
    как тому заблогарассудится, поэтому власти над ним мы имеем очень мало -
    зато мы имеем власть над всем контентом, и поэтому мы сделали второй
    "большой" лейаут с маржином, чтоб буковы отъехали от краёв-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/new_card_background"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp">

        <TextView
            android:id="@+id/foodstuff_name_text_view"
            style="@style/MontserratHeaderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/frame_layout_button_delete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Чечевица" />

        <FrameLayout
            android:id="@+id/frame_layout_button_delete"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@id/frame_layout_button_edit"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector">

            <ImageView
                android:id="@+id/button_delete"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_delete_black" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frame_layout_button_edit"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toStartOf="@+id/button_close"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/rectangular_button_click_selector">

            <ImageView
                android:id="@+id/button_edit"
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_edit_black" />
        </FrameLayout>

        <include layout="@layout/button_close"
            android:id="@+id/button_close"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <include
            android:id="@+id/nutrition_progress_with_values"
            layout="@layout/nutrition_progress_with_values"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/foodstuff_name_text_view" />

        <View
            android:id="@+id/row_fake_top"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values" />

        <TextView
            android:id="@+id/weight_text_view"
            style="@style/RobotoMonoHintText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            app:layout_constraintTop_toBottomOf="@id/nutrition_progress_with_values"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/weight_in_card" />

        <EditText
            android:id="@+id/weight_edit_text"
            style="@style/RobotoMonoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="11.5dp"
            android:layout_marginEnd="11.5dp"
            android:inputType="numberDecimal"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/row_fake_top"
            tools:text="100" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/weight_edit_text"
            app:layout_constraintBottom_toBottomOf="@id/constraint_layout">

            <Button
                android:id="@+id/add_foodstuff_button"
                style="@style/VioletButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_foodstuff"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:layout_marginBottom="15dp" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>