...
        <!--корзина-->
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/basket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_basket"
                android:layout_gravity="right"
                android:layout_marginRight="15dp"
                android:paddingRight="5dp"
...
                android:paddingTop="5dp"
                android:layout_marginTop="2dp"
                android:paddingBottom="5dp"
                android:layout_marginBottom="3dp" />

            <TextView
                android:id="@+id/selected_foodstuffs_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="13dp"
                android:layout_gravity="right"
                android:gravity="center"
                android:layout_marginRight="18dp"
...
